fix(checkstyle): add Spotless configuration to auto-fix Javadoc trailing periods
- Added replaceRegex step to Spotless maven plugin
- Automatically adds periods to single-line Javadoc comments
- Reduced checkstyle violations from 249 to 207 (42 fixed)
- Remaining violations: 28 Javadoc periods, 102 star imports, 57 method ordering, 33 braces, 33 indentation, 22 variable distance, 16 top-level class, 9 abbreviations

The Spotless configuration now includes:
<replaceRegex>
  <searchRegex>(/\*\* )([A-Z][^.]*[^.\s])( \*/)</searchRegex>
  <replacement>$1$2.$3</replacement>
</replaceRegex>

This automatically fixes Javadoc comments like:
/** WebSocket protocol constant */
to:
/** WebSocket protocol constant. */

Run './mvnw spotless:apply' to apply these fixes automatically.